# waave

./: AUTHORS  ChangeLog  Doxyfile  DoxygenLayout.xml  Makefile.am  Makefile.in  README  aclocal.m4  config.h.in  configure  configure.ac  configure.scan
m4/: ax_check_ffmpeg.m4  ax_check_sdl.m4
src/: Makefile.am  Makefile.in  WAAVE.h  audio_decoder.c  audio_decoder.h  audio_decoder_eofs.c  audio_decoder_eofs.h  audio_decoder_mods.c  audio_decoder_mods.h  audio_decoder_stops.c  audio_decoder_stops.h  audio_video_sync.c  audio_video_sync.h  clock_video_sync.c  clock_video_sync.h  common.h  config_ffmpeg.h  config_sdl.h  eof_signal.c  eof_signal.h  packet_feeder.c  packet_feeder.h  stream_overlay.c  stream_overlay.h  stream_renderer.c  stream_renderer.h  stream_surface.c  stream_surface.h  streaming_object.h  sync_object.h  video_decoder.c  video_decoder.h  waave.c  waave_engine_flags.c  waave_engine_flags.h  waave_ffmpeg.c  waave_ffmpeg.h  waave_stream.h
test/: sdl_base.c  waaveplayer12.c  waaveplayer20.c
