lib_LTLIBRARIES = libwaave.la

include_HEADERS = WAAVE.h

libwaave_la_SOURCES = common.h\
		config_sdl.h\
		config_ffmpeg.h\
		waave_stream.h\
		WAAVE.h\
		waave_engine_flags.c waave_engine_flags.h\
		waave_ffmpeg.c waave_ffmpeg.h\
		waave.c\
		streaming_object.h\
		sync_object.h\
		audio_video_sync.c audio_video_sync.h\
		clock_video_sync.c clock_video_sync.h\
		eof_signal.c eof_signal.h\
		packet_feeder.c packet_feeder.h\
		audio_decoder_eofs.c audio_decoder_eofs.h\
		audio_decoder_stops.c audio_decoder_stops.h\
		audio_decoder_mods.c audio_decoder_mods.h\
		audio_decoder.c audio_decoder.h\
		video_decoder.c video_decoder.h\
		stream_overlay.c stream_overlay.h\
		stream_surface.c stream_surface.h\
		stream_renderer.c stream_renderer.h

